# django_lms

./: LICENSE  README.md  pyproject.toml
accounts/: admin.py  models.py  permissions.py  serializers.py
accounts/migrations/: 0001_initial.py  0002_alter_userroles_role_alter_userroles_user.py
education/: admin.py
education/migrations/: 0001_initial.py  0002_klass_klassassistant_klass_assistants_klassteacher_and_more.py  0003_alter_klass_assistants.py  0004_klass_end_time_klass_start_time.py
education/models/: __init__.py  class.py  klass.py  school.py  school_year.py  semester.py
llm/: settings.py
lms/: settings.py  urls.py
payments/migrations/: 0001_initial.py
payments/models/: __init__.py  base_salary.py  monthly_payment.py
teacher_management/: serializer.py  urls.py
teacher_management/migrations/: 0001_initial.py  0002_sessionreport.py
teacher_management/models/: __init__.py  report.py  teacher.py
teacher_management/views/: __init__.py  report_view.py  teacher_view.py
