[project]
name = "django-lms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.10",
    "psycopg>=3.2.10",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a21",
]

[tool.ruff.format]
quote-style="single"
